image-upload preview

--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -1,7 +1,7 @@
 <ss-lib-image-upload
 	[progress]="fileLoadProgress()"
-	[src]="imgSrc()"
 	(fileChanged)="uploadFile($event)"
+	(uploadCancel)="uploadCancel()"
 ></ss-lib-image-upload>
 
 <div class="spinners">
