--- a/projects/front-components/src/lib/components/spinner/spinner.component.html
+++ b/projects/front-components/src/lib/components/spinner/spinner.component.html
@@ -9,13 +9,14 @@
 		r="22"
 		fill="none"
 		stroke-width="6"
-	></circle>
+	/>
 </svg>
 @if (displaySpinnerText()) {
 	<ss-lib-text
 		[type]="TextType.BodySm"
 		[weight]="TextWeight.Medium"
 		[color]="Colors.TextBody2"
-		>Загрузка...</ss-lib-text
 	>
+		Загрузка...
+	</ss-lib-text>
 }
