--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -545,5 +545,10 @@
 
 <!--<pre>{{ timepickerCtrl.value }}</pre>-->
 <ss-lib-table>
-	<tr *ngFor=""></tr>
+	<tr
+		*ngFor="let item of exampleItems"
+		class="ss-lib-table-tr"
+		app-example-table-tr
+		[item]="item"
+	></tr>
 </ss-lib-table>
