feature/update-colors-dev: update figma tokens

--- a/projects/front-components/src/lib/shared/styles/_variables/_alias.scss
+++ b/projects/front-components/src/lib/shared/styles/_variables/_alias.scss
@@ -49,6 +49,18 @@
 	--success-800: var(--green-800, #085d3a);
 	--success-900: var(--green-900, #074d31);
 	--success-950: var(--green-950, #053321);
+	--warning-100: var(--yellow-100, #fef0c7);
+	--warning-200: var(--yellow-200, #fedf89);
+	--warning-25: var(--yellow-25, #fffcf5);
+	--warning-300: var(--yellow-300, #fec84b);
+	--warning-400: var(--yellow-400, #fdb022);
+	--warning-50: var(--yellow-50, #fffaeb);
+	--warning-500: var(--yellow-500, #f79009);
+	--warning-600: var(--yellow-600, #dc6803);
+	--warning-700: var(--yellow-700, #b54708);
+	--warning-800: var(--yellow-800, #93370d);
+	--warning-900: var(--yellow-900, #7a2e0e);
+	--warning-950: var(--yellow-950, #4e1d09);
 	/* number */
 	--border-radius-none: var(--scale-0, 0px);
 	--border-radius-xxs: var(--scale-0-5-2px, 2px);
