--- a/projects/front-components/src/lib/shared/styles/_variables/_brand.scss
+++ b/projects/front-components/src/lib/shared/styles/_variables/_brand.scss
@@ -49,6 +49,18 @@
 	--red-800: #912018;
 	--red-900: #7a271a;
 	--red-950: #55160c;
+	--yellow-100: #fef0c7;
+	--yellow-200: #fedf89;
+	--yellow-25: #fffcf5;
+	--yellow-300: #fec84b;
+	--yellow-400: #fdb022;
+	--yellow-50: #fffaeb;
+	--yellow-500: #f79009;
+	--yellow-600: #dc6803;
+	--yellow-700: #b54708;
+	--yellow-800: #93370d;
+	--yellow-900: #7a2e0e;
+	--yellow-950: #4e1d09;
 	/* number */
 	--scale-0: 0px;
 	--scale-0-25-1px: 1px;
