feature/warning-badge  warning badge

--- a/projects/front-components/src/lib/components/badge/badge.component.scss
+++ b/projects/front-components/src/lib/components/badge/badge.component.scss
@@ -22,6 +22,10 @@
 		outline: 1px solid var(--border-success);
 	}
 
+	&.warning {
+		outline: 1px solid var(--border-warning);
+	}
+
 	&.error {
 		outline: 1px solid var(--border-error);
 	}
