--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -369,6 +369,24 @@
 		}"
 	/>
 
+	<ss-lib-badge
+		[badgeProps]="{
+			size: ExtraSize.lg,
+			icon: IconType.ImagePlus,
+			shape: Shape.Round,
+			status: Status.Warning,
+		}"
+	/>
+
+	<ss-lib-badge
+		[badgeProps]="{
+			size: ExtraSize.lg,
+			icon: IconType.ImagePlus,
+			shape: Shape.Square,
+			status: Status.Warning,
+		}"
+	/>
+
 	<span> Medium </span>
 	<ss-lib-badge
 		[badgeProps]="{
