--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -572,3 +572,10 @@
 		(click)="console.log(5)"
 	/>
 </ss-lib-dropdown-list>
+
+<div class="otp">
+	<ss-lib-otp-input [formControl]="otpCtrl"></ss-lib-otp-input>
+	<br />
+
+	<button (click)="submitOtp()">Submit otp</button>
+</div>
