--- a/projects/front-components/src/lib/components/input/input.component.scss
+++ b/projects/front-components/src/lib/components/input/input.component.scss
@@ -5,7 +5,7 @@
 	color: inherit;
 	transition: outline-color 0.3s ease;
 	background: transparent;
-	height: 44px;
+	height: auto;
 	padding: 10px 14px;
 }
 
@@ -13,8 +13,8 @@
 	flex: 1;
 	width: 100%;
 	font-family: var(--type-font-family-body), serif;
-	font-size: var(--font-size-body-md);
-	font-weight: var(--type-font-weight-regular);
+	font-size: var(--app-custom-input-font-size, var(--font-size-body-md));
+	line-height: var(--app-custom-input-line-height, var(--line-height-body-md));
 	color: inherit;
 	border: none;
 	outline: none;
