feature/fix-button fix size button and modal

--- a/projects/front-components/src/lib/components/modal-action-apply/modal-action-apply.component.html
+++ b/projects/front-components/src/lib/components/modal-action-apply/modal-action-apply.component.html
@@ -2,6 +2,7 @@
 	*ngIf="cancelText()"
 	[type]="buttonType.Secondary"
 	[text]="cancelText()"
+	[size]="ExtraSize.lg"
 	(click)="close()"
 ></ss-lib-button>
 
@@ -9,5 +10,6 @@
 	[disabled]="applyDisabled()"
 	[type]="buttonType.Primary"
 	[text]="applyText()"
+	[size]="ExtraSize.lg"
 	(click)="applyEvent.emit()"
 ></ss-lib-button>
