--- a/projects/front-components/src/lib/components/progress-circle/progress-circle.component.scss
+++ b/projects/front-components/src/lib/components/progress-circle/progress-circle.component.scss
@@ -20,6 +20,7 @@
 		var(--surface-secondary) 69%,
 		rgba(255, 255, 255, 0) 69%
 	);
+	rotate: -80deg;
 
 	& .path {
 		stroke: var(--surface-action);
