--- a/projects/front-components/src/lib/components/image-upload/image-upload.component.html
+++ b/projects/front-components/src/lib/components/image-upload/image-upload.component.html
@@ -18,8 +18,8 @@
 				<ss-lib-text
 					[type]="TextType.BodySm"
 					[color]="Colors.TextBody2"
-					>Добавьте или перетащите изображение</ss-lib-text
-				>
+					>Добавьте или перетащите изображение
+				</ss-lib-text>
 				<ss-lib-text
 					[type]="TextType.BodyXs"
 					[color]="Colors.TextBody3"
@@ -47,6 +47,7 @@
 					[disabled]="disabled()"
 					[text]="'Загрузить с устройства'"
 					[icon]="IconType.Upload"
+					[size]="ExtraSize.lg"
 					(click)="hiddenInput.click()"
 				></ss-lib-button>
 			</label>
