--- a/projects/test-app/src/app/test-modal/test-modal.component.html
+++ b/projects/test-app/src/app/test-modal/test-modal.component.html
@@ -9,6 +9,7 @@
 	[descriptionHeader]="'Какой то description'"
 	[actionsRef]="actions"
 	[contentRef]="contentRef"
+	(closeEmit)="close()"
 >
 </ss-lib-modal>
 
