--- a/projects/front-components/src/lib/components/text/text.component.scss
+++ b/projects/front-components/src/lib/components/text/text.component.scss
@@ -3,6 +3,12 @@ p.ellipsis {
 	overflow: hidden;
 }
 
+p.line-clamp:not(.ellipsis) {
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+}
+
 p.underline {
 	text-decoration: underline;
 }
