--- a/projects/front-components/src/lib/shared/styles/table.scss
+++ b/projects/front-components/src/lib/shared/styles/table.scss
@@ -69,14 +69,22 @@
 
   &-th {
     border-bottom: var(--ss-lib-table-th-border-bottom);
-    padding: 0;
-    text-align: left;
+    height: 41px;
   }
 
   &-td {
     border-bottom: var(--ss-lib-table-td-border-bottom);
     background-color: var(--surface-primary);
-    padding: 0;
+    height: 82px;
+  }
+
+  &-th-item,
+  &-td-item {
+    display: flex;
+    white-space: wrap;
+    position: relative;
+    overflow: hidden;
+    padding: 0 24px;
   }
 
   &-th-item-align--left,
@@ -94,16 +102,9 @@
     justify-content: center;
   }
 
-  &-th-item,
-  &-td-item {
-    display: flex;
-    white-space: wrap;
-    position: relative;
-    overflow: hidden;
-    text-align: left;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
+  &-th-item--no-padding,
+  &-td-item--no-padding {
+    padding: 0;
   }
 
   &-th-item-sticky,
