--- a/projects/test-app/src/app/example-table-tr/example-table.tr.component.html
+++ b/projects/test-app/src/app/example-table-tr/example-table.tr.component.html
@@ -3,15 +3,11 @@
 		<td
 			class="ss-lib-table-td"
 			[class.ss-lib-table-td-sticky]="col.sticky"
-			[style.padding]="col.padding"
-			[ngStyle]="{
-				MaxHeight: col.maxHeight,
-				height: col.height ?? 'auto',
-			}"
 		>
 			<div
 				class="ss-lib-table-td-item
 				ss-lib-table-td-item-align--{{ col.align }}"
+				[class.ss-lib-table-td-item--no-padding]="col.noPadding"
 			>
 				<ng-container *ngSwitchCase="BannerRowItemField.dragAction">
 					<ss-lib-utility-button
@@ -34,7 +30,6 @@
 					<ss-lib-text
 						[type]="TextType.BodySm"
 						[weight]="TextWeight.Regular"
-						[isEllipsis]="true"
 						>{{
 							item().publicationStartDate
 								| date: 'dd MMMM yyyy HH:mm'
@@ -56,7 +51,10 @@
 				</ng-container>
 				<ng-container *ngSwitchCase="BannerRowItemField.actionToggle">
 					@if (item().text) {
-						<ss-lib-link [text]="item().text!"></ss-lib-link>
+						<ss-lib-link
+							[size]="ExtraSize.xs"
+							[text]="item().text!"
+						></ss-lib-link>
 					} @else {
 						<ss-lib-text
 							[color]="Colors.TextOnDisabled"
@@ -72,13 +70,12 @@
 					<ss-lib-toggle></ss-lib-toggle>
 				</ng-container>
 				<ng-container *ngSwitchCase="BannerRowItemField.banner">
-					<!--					<ss-lib-text-->
-					<!--						[type]="TextType.BodySm"-->
-					<!--						[weight]="TextWeight.Regular"-->
-					<!--						[isEllipsis]="true"-->
-					<!--						>{{ item().name }}-->
-					<!--					</ss-lib-text>-->
-					{{ item().name }}
+					<ss-lib-text
+						[type]="TextType.BodySm"
+						[weight]="TextWeight.Regular"
+						[isEllipsis]="true"
+						>{{ item().name }}
+					</ss-lib-text>
 				</ng-container>
 				<ng-container *ngSwitchCase="BannerRowItemField.image">
 					<img
