--- a/projects/front-components/src/lib/components/badge-info/badge-info.component.html
+++ b/projects/front-components/src/lib/components/badge-info/badge-info.component.html
@@ -6,6 +6,7 @@
 			<ss-lib-text
 				[type]="TextType.BodyLg"
 				[weight]="TextWeight.Semibold"
+				[align]="Align.Start"
 			>
 				{{ title() }}
 			</ss-lib-text>
@@ -13,6 +14,7 @@
 				[color]="Colors.TextBody3"
 				[type]="TextType.BodySm"
 				[weight]="TextWeight.Regular"
+				[align]="Align.Start"
 			>
 				{{ description() }}
 			</ss-lib-text>
