--- a/projects/front-components/src/lib/components/confirm-modal/confirm-modal.component.html
+++ b/projects/front-components/src/lib/components/confirm-modal/confirm-modal.component.html
@@ -1,7 +1,7 @@
 <ng-template #actionsRef>
 	<ss-lib-modal-action-apply
 		[applyText]="applyText.text"
-		[cancelText]="cancelText()"
+		[cancelText]="cancelText"
 		(applyEvent)="onApplyEvent()"
 	></ss-lib-modal-action-apply>
 </ng-template>
