--- a/projects/front-components/src/lib/shared/styles/table.scss
+++ b/projects/front-components/src/lib/shared/styles/table.scss
@@ -48,17 +48,21 @@
 		}
 
 		tr:hover {
-			background-color: #f9f9f9;
+			background-color: var(--surface-action-hover-3);
 		}
 
 		tr.dragging {
 			opacity: 0.3;
-			background-color: #f0f0f0;
+			background-color: var(--surface-secondary);
 		}
 
 		tr.drag-over {
-			background-color: #e6f3ff;
-			border-top: 2px solid #2196f3;
+			background-color: var(--surface-information-2);
+			box-shadow: 0px 4px 0px 0px var(--border-focus) inset;
+		}
+
+		tr.drag-over.dragging {
+			opacity: 60%;
 		}
 
 		tr {
