feature/fix-table-styles: add animation to close sidebar, change tokens for table(for drag and drop), fix empty-state align

--- a/projects/front-components/src/lib/components/empty-state/empty-state.component.html
+++ b/projects/front-components/src/lib/components/empty-state/empty-state.component.html
@@ -22,12 +22,14 @@
 				<ss-lib-text
 					[type]="TextType.BodyXl"
 					[weight]="TextWeight.Semibold"
+					[align]="Align.Center"
 					>{{ title() }}</ss-lib-text
 				>
 				<ss-lib-text
 					*ngIf="description()"
 					[type]="TextType.BodyMd"
 					[weight]="TextWeight.Regular"
+					[align]="Align.Center"
 					>{{ description() }}
 				</ss-lib-text>
 			</div>
