--- a/projects/front-components/src/lib/shared/styles/_variables/_brand.scss
+++ b/projects/front-components/src/lib/shared/styles/_variables/_brand.scss
@@ -1,15 +1,18 @@
 /* ⬇️ Brand */
 :root {
-	--blue-100: #cee4f4;
-	--blue-200: #9dc9ea;
-	--blue-300: #6daddf;
-	--blue-400: #3c92d5;
-	--blue-50: #f3f8fc;
-	--blue-500: #0b77ca;
-	--blue-600: #095fa2;
-	--blue-700: #074779;
-	--blue-800: #043051;
-	--blue-900: #021828;
+	--blue-100: #fbfdfe;
+	--blue-1000: #074779;
+	--blue-1100: #043051;
+	--blue-1200: #021828;
+	--blue-1300: #01111d;
+	--blue-200: #f7fafd;
+	--blue-300: #f3f8fc;
+	--blue-400: #e2eff8;
+	--blue-500: #b6d7ef;
+	--blue-600: #85bbe5;
+	--blue-700: #3c92d5;
+	--blue-800: #0b77ca;
+	--blue-900: #095fa2;
 	--green-100: #dcfae6;
 	--green-200: #abefc6;
 	--green-25: #f6fef9;
@@ -29,7 +32,8 @@
 	--grey-1300: #0e0e0e;
 	--grey-200: #fafaf9;
 	--grey-300: #f5f5f4;
-	--grey-400: #e7e7e6;
+	--grey-350: #ebebea;
+	--grey-400: #dcdcdb;
 	--grey-500: #d3d3d1;
 	--grey-600: #b3b3b1;
 	--grey-700: #868684;
