--- a/projects/front-components/src/lib/components/sidebar/sidebar.component.scss
+++ b/projects/front-components/src/lib/components/sidebar/sidebar.component.scss
@@ -31,17 +31,35 @@
 	}
 
 	&__bottom-menu {
-		padding: 16px 12px;
-		display: flex;
-		height: 64px;
-		flex-direction: column;
-		justify-content: space-around;
+		padding-bottom: 8px;
+
+
+		&_divider {
+			padding: 8px 20px;
+		}
 	}
 
 	&__bottom-menu-block {
 		display: flex;
+		height: 40px;
+		align-items: center;
+		justify-content: start;
 		flex-wrap: nowrap;
 		text-wrap: nowrap;
-		padding: 0 8px;
+		margin: 0 12px;
+		cursor: pointer;
+		overflow: hidden;
+		white-space: nowrap;
+
+		&_icon-button {
+			padding: 0 10px;
+			max-width: 20px; /* Collapsed state */
+			transition: max-width 1s ease; /* Animate max-width */
+			overflow: hidden;
+		}
+
+		&_icon-button.expanded {
+			max-width: 100%; /* Large enough to fit content, adjust as needed */
+		}
 	}
 }
