--- a/projects/front-components/src/lib/shared/styles/_variables/_alias.scss
+++ b/projects/front-components/src/lib/shared/styles/_variables/_alias.scss
@@ -19,7 +19,8 @@
 	--neutral-1300: var(--grey-1300, #0e0e0e);
 	--neutral-200: var(--grey-200, #fafaf9);
 	--neutral-300: var(--grey-300, #f5f5f4);
-	--neutral-400: var(--grey-400, #e7e7e6);
+	--neutral-350: var(--grey-350, #ebebea);
+	--neutral-400: var(--grey-400, #dcdcdb);
 	--neutral-500: var(--grey-500, #d3d3d1);
 	--neutral-600: var(--grey-600, #b3b3b1);
 	--neutral-700: var(--grey-700, #868684);
@@ -27,16 +28,19 @@
 	--neutral-900: var(--grey-900, #525250);
 	--neutral-black: var(--pure-black, #000000);
 	--neutral-white: var(--pure-white, #ffffff);
-	--primary-100: var(--blue-100, #cee4f4);
-	--primary-200: var(--blue-200, #9dc9ea);
-	--primary-300: var(--blue-300, #6daddf);
-	--primary-400: var(--blue-400, #3c92d5);
-	--primary-50: var(--blue-50, #f3f8fc);
-	--primary-600: var(--blue-600, #095fa2);
-	--primary-700: var(--blue-700, #074779);
-	--primary-800: var(--blue-800, #043051);
-	--primary-900: var(--blue-900, #021828);
-	--primary-default: var(--blue-500, #0b77ca);
+	--primary-100: var(--blue-100, #fbfdfe);
+	--primary-1000: var(--blue-1000, #074779);
+	--primary-1100: var(--blue-1100, #043051);
+	--primary-1200: var(--blue-1200, #021828);
+	--primary-1300: var(--blue-1300, #01111d);
+	--primary-200: var(--blue-200, #f7fafd);
+	--primary-300: var(--blue-300, #f3f8fc);
+	--primary-400: var(--blue-400, #e2eff8);
+	--primary-500: var(--blue-500, #b6d7ef);
+	--primary-600: var(--blue-600, #85bbe5);
+	--primary-700: var(--blue-700, #3c92d5);
+	--primary-900: var(--blue-900, #095fa2);
+	--primary-default: var(--blue-800, #0b77ca);
 	--success-100: var(--green-100, #dcfae6);
 	--success-200: var(--green-200, #abefc6);
 	--success-25: var(--green-25, #f6fef9);
