--- a/projects/front-components/src/lib/shared/styles/custom-variables.scss
+++ b/projects/front-components/src/lib/shared/styles/custom-variables.scss
@@ -5,9 +5,9 @@
 	/* Light */
 	--border-disabled: var(--grey-500, #d3d3d1);
 	--border-error: var(--red-300, #fda29b);
-	--border-focus: var(--blue-400, #3c92d5);
+	--border-focus: var(--blue-700, #3c92d5);
 	--border-focus-error: var(--red-400, #f97066);
-	--border-primary: var(--grey-400, #e7e7e6);
+	--border-primary: var(--grey-400, #dcdcdb);
 	--border-secondary: var(--grey-500, #d3d3d1);
 	--border-secondary-hover: var(--grey-600, #b3b3b1);
 	--border-success: var(--green-300, #75e0a7);
@@ -26,27 +26,30 @@
 	--icon-action-hover: var(--grey-900, #525250);
 	--icon-disabled: var(--grey-600, #b3b3b1);
 	--icon-error: var(--red-600, #d92d20);
-	--icon-information: var(--blue-500, #0b77ca);
+	--icon-information: var(--blue-800, #0b77ca);
 	--icon-on-action: var(--pure-white, #ffffff);
 	--icon-on-disabled: var(--grey-600, #b3b3b1);
 	--icon-primary: var(--grey-1000, #353534);
-	--icon-secondary: var(--grey-400, #e7e7e6);
+	--icon-secondary: var(--grey-400, #dcdcdb);
 	--icon-success: var(--green-600, #079455);
 	--icon-warning: var(--yellow-500, #f79009);
-	--surface-action: var(--blue-500, #0b77ca);
+	--surface-action: var(--blue-800, #0b77ca);
 	--surface-action-4: var(--grey-1200, #191919);
-	--surface-action-hover: var(--blue-600, #095fa2);
-	--surface-action-hover-2: var(--grey-400, #e7e7e6);
+	--surface-action-hover: var(--blue-900, #095fa2);
+	--surface-action-hover-2: var(--grey-400, #dcdcdb);
 	--surface-action-hover-3: var(--grey-300, #f5f5f4);
 	--surface-action-hover-4: var(--grey-1000, #353534);
-	--surface-action-pressed: var(--blue-700, #074779);
+	--surface-action-pressed: var(--blue-1000, #074779);
 	--surface-action-pressed-2: var(--grey-500, #d3d3d1);
+	--surface-action-pressed-3: var(--grey-350, #ebebea);
 	--surface-action-pressed-4: var(--grey-900, #525250);
 	--surface-backdrop: var(--grey-1300, #0e0e0e);
 	--surface-disabled: var(--grey-300, #f5f5f4);
 	--surface-disabled-selected: var(--grey-600, #b3b3b1);
 	--surface-information: var(--grey-1000, #353534);
-	--surface-information-2: var(--blue-50, #f3f8fc);
+	--surface-information-2: var(--blue-300, #f3f8fc);
+	--surface-information-hover-2: var(--blue-400, #e2eff8);
+	--surface-information-selected-2: var(--blue-200, #f7fafd);
 	--surface-page: var(--grey-200, #fafaf9);
 	--surface-primary: var(--pure-white, #ffffff);
 	--surface-secondary: var(--grey-200, #fafaf9);
@@ -59,23 +62,23 @@
 	--text-disabled: var(--grey-600, #b3b3b1);
 	--text-error: var(--red-600, #d92d20);
 	--text-headings: var(--grey-1300, #0e0e0e);
-	--text-information: var(--blue-500, #0b77ca);
+	--text-information: var(--blue-800, #0b77ca);
 	--text-on-action: var(--pure-white, #ffffff);
 	--text-on-disabled: var(--grey-700, #868684);
-	--text-on-information: var(--grey-400, #e7e7e6);
+	--text-on-information: var(--grey-400, #dcdcdb);
 	--text-on-information-2: var(--grey-600, #b3b3b1);
 
 	/* Mapped - Dark */
 	.dark {
 		--border-disabled: var(--grey-800, #686866);
 		--border-error: var(--red-300, #fda29b);
-		--border-focus: var(--blue-400, #3c92d5);
+		--border-focus: var(--blue-700, #3c92d5);
 		--border-focus-error: var(--red-400, #f97066);
 		--border-primary: var(--grey-1000, #353534);
 		--border-secondary: var(--grey-900, #525250);
 		--border-secondary-hover: var(--grey-800, #686866);
 		--border-success: var(--green-300, #75e0a7);
-		--border-tertiary: var(--grey-400, #e7e7e6);
+		--border-tertiary: var(--grey-400, #dcdcdb);
 		--border-warning: var(--yellow-300, #fec84b);
 		--effects-shadows-10: #00000066;
 		--effects-shadows-14: #0000008f;
@@ -87,43 +90,46 @@
 		--effects-shadows-8: #00000052;
 		--icon-action: var(--grey-300, #f5f5f4);
 		--icon-action-2: var(--grey-300, #f5f5f4);
-		--icon-action-hover: var(--grey-400, #e7e7e6);
+		--icon-action-hover: var(--grey-400, #dcdcdb);
 		--icon-disabled: var(--grey-600, #b3b3b1);
 		--icon-error: var(--red-400, #f97066);
-		--icon-information: var(--blue-500, #0b77ca);
+		--icon-information: var(--blue-800, #0b77ca);
 		--icon-on-action: var(--pure-white, #ffffff);
 		--icon-on-disabled: var(--grey-600, #b3b3b1);
 		--icon-primary: var(--pure-white, #ffffff);
 		--icon-secondary: var(--grey-1000, #353534);
 		--icon-success: var(--green-400, #47cd89);
 		--icon-warning: var(--yellow-500, #f79009);
-		--surface-action: var(--blue-500, #0b77ca);
+		--surface-action: var(--blue-800, #0b77ca);
 		--surface-action-4: var(--grey-1200, #191919);
-		--surface-action-hover: var(--blue-600, #095fa2);
+		--surface-action-hover: var(--blue-900, #095fa2);
 		--surface-action-hover-2: var(--grey-900, #525250);
 		--surface-action-hover-3: var(--grey-1100, #1f1f1e);
 		--surface-action-hover-4: var(--grey-1000, #353534);
-		--surface-action-pressed: var(--blue-700, #074779);
+		--surface-action-pressed: var(--blue-1000, #074779);
 		--surface-action-pressed-2: var(--grey-800, #686866);
+		--surface-action-pressed-3: var(--grey-1000, #353534);
 		--surface-action-pressed-4: var(--grey-900, #525250);
 		--surface-backdrop: var(--grey-1300, #0e0e0e);
 		--surface-disabled: var(--grey-1000, #353534);
 		--surface-disabled-selected: var(--grey-600, #b3b3b1);
 		--surface-information: var(--grey-200, #fafaf9);
-		--surface-information-2: var(--blue-900, #021828);
+		--surface-information-2: var(--blue-1200, #021828);
+		--surface-information-hover-2: var(--blue-1100, #043051);
+		--surface-information-selected-2: var(--blue-1300, #01111d);
 		--surface-page: var(--grey-1200, #191919);
 		--surface-primary: var(--grey-1100, #1f1f1e);
 		--surface-secondary: var(--grey-1200, #191919);
-		--text-action: var(--grey-400, #e7e7e6);
-		--text-action-hover: var(--grey-400, #e7e7e6);
-		--text-body: var(--grey-400, #e7e7e6);
+		--text-action: var(--grey-400, #dcdcdb);
+		--text-action-hover: var(--grey-400, #dcdcdb);
+		--text-body: var(--grey-400, #dcdcdb);
 		--text-body-2: var(--grey-500, #d3d3d1);
 		--text-body-3: var(--grey-600, #b3b3b1);
 		--text-body-4: var(--grey-700, #868684);
 		--text-disabled: var(--grey-700, #868684);
 		--text-error: var(--red-400, #f97066);
 		--text-headings: var(--grey-300, #f5f5f4);
-		--text-information: var(--blue-300, #6daddf);
+		--text-information: var(--blue-600, #85bbe5);
 		--text-on-action: var(--pure-white, #ffffff);
 		--text-on-disabled: var(--grey-600, #b3b3b1);
 		--text-on-information: var(--grey-900, #525250);
