feature/fix-for-admin-panel: change size of upload button

--- a/projects/front-components/src/lib/components/image-upload/image-upload.component.html
+++ b/projects/front-components/src/lib/components/image-upload/image-upload.component.html
@@ -47,7 +47,7 @@
 					[disabled]="disabled()"
 					[text]="'Загрузить с устройства'"
 					[icon]="IconType.Upload"
-					[size]="ExtraSize.lg"
+					[size]="ExtraSize.sm"
 					(click)="hiddenInput.click()"
 				></ss-lib-button>
 			</label>
