feature/fix-for-admin-panel: remove border-bottom for last tr

--- a/projects/front-components/src/lib/shared/styles/table.scss
+++ b/projects/front-components/src/lib/shared/styles/table.scss
@@ -65,8 +65,7 @@
 		}
 
 		&__tbody {
-			tr.ss-lib-table-tr:not(:has(~ tr.ss-lib-table-tr))
-				.ss-lib-table-td {
+			tr.ss-lib-table-tr:last-of-type {
 				border-bottom: none;
 				border-radius: var(--ss-lib-table-border-radius);
 			}
