feature/fix-for-admin-panel: set pointer-events: none on disabled state

--- a/projects/front-components/src/lib/components/form-field/form-field.component.scss
+++ b/projects/front-components/src/lib/components/form-field/form-field.component.scss
@@ -55,6 +55,7 @@
 	background: var(--surface-disabled);
 	color: var(--text-on-disabled);
 	outline: 1px solid var(--border-disabled);
+	pointer-events: none;
 }
 
 .field-container:focus-within:not(.state-invalid) {
