feature/fix-for-admin-panel: change background for file-uploader, fix hover on first row of table

--- a/projects/front-components/src/lib/components/image-upload/image-upload.component.html
+++ b/projects/front-components/src/lib/components/image-upload/image-upload.component.html
@@ -54,7 +54,10 @@
 		</div>
 	}
 	@case (States.Preview) {
-		<div class="image-preview">
+		<div
+			class="image-preview"
+			[style.background-image]="backgroundImg() | safe: 'html'"
+		>
 			<ss-lib-preview-button
 				class="image-preview__close"
 				(click)="onFileDelete()"
