--- a/projects/front-components/src/lib/shared/styles/table.scss
+++ b/projects/front-components/src/lib/shared/styles/table.scss
@@ -75,7 +75,7 @@
 			}
 
 			tr:hover {
-				background-color: var(--surface-action-hover-3);
+				background-color: var(--surface-action-hover-3) !important;
 			}
 
 			tr.dragging:not(.drag-over) {
