--- a/projects/front-components/src/lib/components/image-upload/image-upload.component.scss
+++ b/projects/front-components/src/lib/components/image-upload/image-upload.component.scss
@@ -40,19 +40,41 @@
 	align-items: center;
 	justify-content: center;
 	background-color: black;
+	background-size: cover;
+	background-position: center;
 	border-radius: var(--border-radius-xl);
+}
 
-	&__close {
-		position: absolute;
-		right: var(--paragraph-spacing-body-xs);
-		top: var(--paragraph-spacing-body-xs);
-	}
+.image-preview::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: inherit;
+	background-size: cover;
+	background-position: center;
+	filter: blur(10px) brightness(0.7) saturate(1.2);
+	transform: scale(1.2);
+	z-index: 1;
+	border-radius: var(--border-radius-xl);
+}
 
-	img {
-		max-width: 100%;
-		max-height: 100%;
-		object-fit: contain;
-	}
+.image-preview__close {
+	position: absolute;
+	right: var(--paragraph-spacing-body-xs);
+	top: var(--paragraph-spacing-body-xs);
+	z-index: 3;
+}
+
+.image-preview img {
+	position: relative;
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: contain;
+	object-position: center;
+	z-index: 2;
 }
 
 .image-loading {
